--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--Flavor Matches-->
+        <!--All Ingredients-->
         <scene sceneID="I46-hR-Jw9">
             <objects>
                 <tableViewController id="yDJ-pt-my1" customClass="MatchTableViewController" customModule="FlavorFinder" customModuleProvider="target" sceneMemberID="viewController">
@@ -36,7 +36,22 @@
                             <outlet property="delegate" destination="yDJ-pt-my1" id="2P9-sL-qly"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Flavor Matches" id="eQ5-0u-QHl"/>
+                    <navigationItem key="navigationItem" title="All Ingredients" id="eQ5-0u-QHl">
+                        <barButtonItem key="leftBarButtonItem" title="&lt;" id="UUL-Fa-7ff">
+                            <connections>
+                                <action selector="goBack:" destination="yDJ-pt-my1" id="rbG-Ac-V0k"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="&gt;" id="LuI-qR-nEs">
+                            <connections>
+                                <action selector="goForward:" destination="yDJ-pt-my1" id="zpe-xo-uTR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="goBackBtn" destination="UUL-Fa-7ff" id="RzH-sa-Qqy"/>
+                        <outlet property="goForwardBtn" destination="LuI-qR-nEs" id="ju7-mQ-82F"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XZF-Bl-251" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
