--- a/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
+++ b/FlavorFinder/FlavorFinder/Base.lproj/Main.storyboard
@@ -98,51 +98,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register Page" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffs-dJ-FNO">
-                                <rect key="frame" x="247" y="231" width="106" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Sign Up" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffs-dJ-FNO">
+                                <rect key="frame" x="219" y="78" width="163" height="82"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="98s-Lv-fsr">
-                                <rect key="frame" x="252" y="260" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="98s-Lv-fsr">
+                                <rect key="frame" x="217" y="168" width="165" height="30"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="692-E8-NQh">
-                                <rect key="frame" x="252" y="305" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="692-E8-NQh">
+                                <rect key="frame" x="217" y="212" width="165" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9en-v4-ss2">
-                                <rect key="frame" x="252" y="349" width="97" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9en-v4-ss2">
+                                <rect key="frame" x="217" y="255" width="165" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jkh-Ln-Knn">
-                                <rect key="frame" x="219" y="428" width="163" height="30"/>
-                                <state key="normal" title="Create Account"/>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="By clicking the button below, I certify that I am 13 years of age or older." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ifX-C3-tVL">
-                                <rect key="frame" x="156" y="371" width="308" height="66"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="By clicking the button below, I certify that I am 13 years of age or older." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ifX-C3-tVL">
+                                <rect key="frame" x="146" y="293" width="308" height="66"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jkh-Ln-Knn">
+                                <rect key="frame" x="218" y="359" width="163" height="30"/>
+                                <state key="normal" title="Create Account"/>
+                                <connections>
+                                    <action selector="registerSubmitActionBtn:" destination="JAI-Ms-6hY" eventType="touchUpInside" id="xPg-LB-qHI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="bXV-Gs-7R6" firstAttribute="top" secondItem="ffs-dJ-FNO" secondAttribute="bottom" constant="348" id="D7D-I8-SLx"/>
-                            <constraint firstItem="ffs-dJ-FNO" firstAttribute="top" secondItem="uTP-7q-HjM" secondAttribute="bottom" constant="167" id="IRv-vM-HCT"/>
-                            <constraint firstItem="ffs-dJ-FNO" firstAttribute="centerX" secondItem="nsi-Pa-HHQ" secondAttribute="centerX" id="sgW-Bw-1bp"/>
+                            <constraint firstItem="692-E8-NQh" firstAttribute="centerX" secondItem="nsi-Pa-HHQ" secondAttribute="centerX" id="Fp0-Pk-lMr"/>
+                            <constraint firstItem="98s-Lv-fsr" firstAttribute="centerX" secondItem="nsi-Pa-HHQ" secondAttribute="centerX" id="Isx-En-fjc"/>
+                            <constraint firstItem="ffs-dJ-FNO" firstAttribute="centerX" secondItem="nsi-Pa-HHQ" secondAttribute="centerX" id="aQT-3V-hUc"/>
+                            <constraint firstItem="9en-v4-ss2" firstAttribute="centerX" secondItem="nsi-Pa-HHQ" secondAttribute="centerX" id="doj-SK-QIJ"/>
+                            <constraint firstItem="ifX-C3-tVL" firstAttribute="centerX" secondItem="nsi-Pa-HHQ" secondAttribute="centerX" id="mtI-3i-bIe"/>
+                            <constraint firstItem="jkh-Ln-Knn" firstAttribute="centerX" secondItem="nsi-Pa-HHQ" secondAttribute="centerX" id="ucK-Pk-tT2"/>
+                            <constraint firstItem="ifX-C3-tVL" firstAttribute="centerY" secondItem="nsi-Pa-HHQ" secondAttribute="centerY" id="wsr-f7-s0w"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="RegisterCOPPA" destination="ifX-C3-tVL" id="wTC-Ua-pQa"/>
-                        <outlet property="RegisterEmail" destination="98s-Lv-fsr" id="odd-Ff-ffZ"/>
-                        <outlet property="RegisterLabel" destination="ffs-dJ-FNO" id="Aae-R9-tza"/>
                         <outlet property="RegisterPassword" destination="9en-v4-ss2" id="s4U-e4-dXj"/>
-                        <outlet property="RegisterSubmitBtn" destination="jkh-Ln-Knn" id="SdK-Xw-NUR"/>
+                        <outlet property="registerCOPPA" destination="ifX-C3-tVL" id="E0p-je-YC5"/>
+                        <outlet property="registerEmail" destination="98s-Lv-fsr" id="Hg2-7O-Q9s"/>
+                        <outlet property="registerLabel" destination="ffs-dJ-FNO" id="d1D-1N-lkB"/>
+                        <outlet property="registerPassword" destination="9en-v4-ss2" id="u8Y-bS-gA8"/>
+                        <outlet property="registerUsername" destination="692-E8-NQh" id="EIP-1c-urz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hBF-3m-D8a" userLabel="First Responder" sceneMemberID="firstResponder"/>
